--- a/package.json
+++ b/package.json
@@ -2,11 +2,48 @@
   "name": "project-storefront-backend",
   "version": "1.0.0",
   "description": "Udacity Project",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "prettier --config .prettierrc \"src/**/*.ts\" --write",
+    "lint": "eslint src/**/*.ts",
+    "start": "nodemon src/server.ts",
+    "build": "npx tsc",
+    "test_endpoint": "db-migrate --env test up && npm run build && jasmine",
+    "test": "db-migrate --env test up && npm run build && jasmine && db-migrate db:drop article_test"
   },
-  "keywords": [],
   "author": "Modebe Stephen",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/db-migrate-pg": "0.0.10",
+    "@types/express": "^4.17.14",
+    "@types/jasmine": "^4.3.1",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/node": "^18.11.10",
+    "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jasmine": "^4.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "prettier": "^2.8.0",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "nodemon": "^2.0.20",
+    "pg": "^8.8.0"
+  }
 }
