--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
-PGHOST = YOUR_HOST_GOES_IN_HERE
-PGENVDB = YOUR_ENVIRONMENTDB_GOES_IN_HERE
-PGUSER = YOUR_USERNAME_GOES_IN_HERE
-PGPASSWORD = YOUR_PASSWORD_GOES_IN_HERE
-PGPORT = PORT_TO_RUN_ON
-ENV = env
-PGTESTDB = YOUR_TESTDB_GOES_IN_HERE
+PGHOST = 
+PGENVDB = 
+PGUSER = 
+PGPASSWORD = 
+PGPORT = 
+ENV = 
+PGTESTDB = 
+BCRYPTPASSWORD = 
+SALTROUNDS = 
+JWTSECRET = 
+
