--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint src/**/*.ts",
     "start": "nodemon src/server.ts",
     "build": "npx tsc",
+    "test_model": "npm run build && jasmine",
     "test_endpoint": "db-migrate --env test up && npm run build && jasmine",
     "test": "db:create shopping_user_test db-migrate --env test up && npm run build && jasmine && db-migrate db:drop shopping_user_test"
   },
