--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "lint": "eslint src/**/*.ts",
     "start": "nodemon src/server.ts",
     "build": "npx tsc",
-    "test": "npm run build && jasmine",
-    "down": "db-migrate down && db-migrate down && db-migrate down && db-migrate down"
+    "test": "db-migrate --env test up && npm run build && jasmine"
   },
   "author": "Modebe Stephen",
   "license": "ISC",
