--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src/**/*.ts",
     "start": "nodemon src/server.ts",
     "build": "npx tsc",
-    "test": "db-migrate --env test up && npm run build && jasmine"
+    "test": "set ENV=test && db-migrate --env test up && npm run build && jasmine"
   },
   "author": "Modebe Stephen",
   "license": "ISC",
